--- a/apps/backend/.gitignore
+++ b/apps/backend/.gitignore
@@ -38,6 +38,10 @@ reports/
 # Java heap dump
 *.hprof
 
+# Spring Boot 설정
+application.properties
+application.yml
+
 ### IntelliJ IDEA ###
 .idea/
 *.iml
