--- a/apps/backend/build.gradle
+++ b/apps/backend/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     // === 테스트 관련 ===
     testImplementation 'org.springframework.boot:spring-boot-starter-test'          // Spring Boot 테스트 도구
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'                    // JUnit 런처
+
+    // === openVidu(Livekit) ===
+    implementation "io.livekit:livekit-server:0.8.5"
 }
 
 tasks.named('test') {
