--- a/apps/backend/build.gradle
+++ b/apps/backend/build.gradle
@@ -65,6 +65,8 @@ dependencies {
 
     // === openVidu(Livekit) ===
     implementation "io.livekit:livekit-server:0.8.5"
+    implementation 'com.squareup.retrofit2:retrofit:2.12.0'
+    implementation 'com.squareup.retrofit2:converter-protobuf:2.12.0'
 }
 
 tasks.named('test') {
