--- a/apps/AI/requirements.txt
+++ b/apps/AI/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 anyio==4.9.0
 certifi==2025.8.3
+charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
 distro==1.9.0
@@ -18,11 +19,13 @@ pydantic_core==2.33.2
 python-dotenv==1.1.1
 python-multipart==0.0.20
 PyYAML==6.0.2
+requests==2.32.4
 sniffio==1.3.1
 starlette==0.47.2
 tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.14.1
+urllib3==2.5.0
 uvicorn==0.35.0
 watchfiles==1.1.0
 websockets==15.0.1
