fix: Swagger 500 에러 해결 및 전역 예외 처리 개선
- Swagger와의 충돌을 방지하기 위해 GlobalExceptionHandler 수정
- 각 도메인별로 RestControllerAdvice에 basePackages 명시
- 기존 예외 처리 구조 개선 및 Swagger 접근 정상화

--- a/apps/backend/build.gradle
+++ b/apps/backend/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     // === 테스트 관련 ===
     testImplementation 'org.springframework.boot:spring-boot-starter-test'          // Spring Boot 테스트 도구
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'                    // JUnit 런처
+    testImplementation 'org.mockito:mockito-core:5.12.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'
 
     // === openVidu(Livekit) ===
     implementation "io.livekit:livekit-server:0.8.5"
