fix: https 적용을 위한 설정 적용

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,24 @@
 server {
     listen 80;
+    server_name malmoon.store www.malmoon.store;
+
+    # Let's Encrypt 인증을 위한 경로
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    # 나머지 HTTP 요청은 HTTPS로 리디렉션
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name malmoon.store www.malmoon.store;
+
+    ssl_certificate /etc/letsencrypt/live/malmoon.store/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/malmoon.store/privkey.pem;
 
     # React 프론트
     location / {
@@ -8,7 +27,6 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-
     }
 
     # Spring Boot 백엔드
