--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -31,7 +31,7 @@ server {
 
     # Spring Boot 백엔드
     location /api/ {
-        proxy_pass http://backend:8080/;
+        proxy_pass http://backend:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -40,7 +40,7 @@ server {
 
     # FastAPI AI 서버
     location /ai/ {
-        proxy_pass http://ai:8000/;
+        proxy_pass http://ai:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
