--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -9,7 +9,7 @@ FROM nginx:alpine
 COPY --from=build /app/build /usr/share/nginx/html
 
 # Optional: Nginx 설정 파일 교체 가능
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./nginx/frontend.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
