--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "agora-rtc-sdk-ng": "^4.23.4",
     "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "jwt-decode": "^4.0.0",
     "livekit-client": "^2.15.4",
     "react": "^19.1.0",
