fix: infra 관련 코드 수정

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -33,19 +33,21 @@ server {
     location /api/ {
         proxy_pass http://backend:8080;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
+        #proxy_set_header Upgrade $http_upgrade;
+        #proxy_set_header Connection 'upgrade';
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # FastAPI AI 서버
-    location /ai/ {
-        proxy_pass http://ai:8000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-    }
+#     location /ai/ {
+#         proxy_pass http://ai:8000;
+#         proxy_http_version 1.1;
+#         proxy_set_header Upgrade $http_upgrade;
+#         proxy_set_header Connection 'upgrade';
+#         proxy_set_header Host $host;
+#     }
 
     # 에러 페이지 설정
     error_page 500 502 503 504 /50x.html;
