--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,34 +13,55 @@ services:
       - frontend
       - backend
       - ai
+    networks:
+      - malmoon-net
 
   frontend:
-    build:
-      context: ./apps/frontend
-      dockerfile: Dockerfile
+    #    build:
+    #      context: ./apps/frontend
+    #      dockerfile: Dockerfile
     image: inttype/malmoon:frontend
     container_name: frontend
     expose:
       - "80"
+    networks:
+      - malmoon-net
 
   backend:
-    build:
-      context: ./apps/backend
-      dockerfile: Dockerfile
+    #    build:
+    #      context: ./apps/backend
+    #      dockerfile: Dockerfile
     image: inttype/malmoon:backend
     env_file:
       - ./apps/backend/.env
     container_name: backend
     expose:
       - "8080"
+    depends_on:
+      ai:
+        condition: service_healthy
+    networks:
+      - malmoon-net
 
   ai:
-    build:
-      context: ./apps/AI
-      dockerfile: Dockerfile
+    #    build:
+    #      context: ./apps/AI
+    #      dockerfile: Dockerfile
     image: inttype/malmoon:ai
     env_file:
       - ./apps/AI/.env
     container_name: ai
     expose:
       - "8000"
+    healthcheck:
+      test: [ "CMD", "python", "-c", "import urllib.request,sys; sys.exit(0) if urllib.request.urlopen('http://localhost:8000/health', timeout=2).status==200 else sys.exit(1)" ]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 20s
+    networks:
+      - malmoon-net
+
+networks:
+  malmoon-net:
+    driver: bridge
