--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -3,3 +3,5 @@ WORKDIR /app
 COPY build/libs/malmoon-backend-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
+
+RUN ["echo", " test..."]
