--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -40,6 +40,19 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # LiveKit 신호(WebSocket)
+    location /rtc {
+        proxy_pass http://i13c107.p.ssafy.io:7880;  # <- /rtc 붙이지 않음
+        proxy_http_version 1.1;
+
+        # WebSocket 업그레이드
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        proxy_read_timeout 86400;
+        proxy_send_timeout 86400;
+    }
+
     # FastAPI AI 서버
 #     location /ai/ {
 #         proxy_pass http://ai:8000;
