--- a/apps/backend/build.gradle
+++ b/apps/backend/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-websocket'        // WebSocket 사용
     implementation 'org.springframework.boot:spring-boot-starter-validation'       // Bean Validation
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    
+
     // === OpenAPI (Swagger) 문서화 ===
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'       // Swagger UI + OpenAPI 3.0
 
@@ -74,4 +74,8 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+springBoot {
+    buildInfo()
 }
