feat: i13c107.p.ssafy.io 접근 시 www.malmoon.store로 HTTPS 리다이렉트 및 인증서 SAN 확장

--- a/apps/AI/Dockerfile
+++ b/apps/AI/Dockerfile
@@ -2,13 +2,17 @@ FROM python:3.10-slim
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
-    PYTHONPATH=/apps
+    PYTHONPATH=/apps \
+    PIP_DEFAULT_TIMEOUT=180
 
 WORKDIR /apps/AI
 
 COPY requirements.txt .
 
-RUN pip install --no-cache-dir -r requirements.txt
+# BuildKit 캐시 사용 (DOCKER_BUILDKIT=1 필요)
+RUN --mount=type=cache,target=/root/.cache/pip \
+    python -m pip install --upgrade pip && \
+    pip install --timeout 180 --retries 5 --prefer-binary -r requirements.txt
 
 # 컨텍스트가 apps/AI 이므로 이 한 줄이면 /apps/AI 아래에 api/, main.py 등이 복사됨
 COPY . .
