--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,8 +3,10 @@ server {
     server_name malmoon.store www.malmoon.store;
 
     # Let's Encrypt 인증을 위한 경로
-    location /.well-known/acme-challenge/ {
+    location ^~ /.well-known/acme-challenge/ {
         root /var/www/certbot;
+        default_type "text/plain";
+        try_files $uri =404;
     }
 
     # 나머지 HTTP 요청은 HTTPS로 리디렉션
@@ -14,11 +16,46 @@ server {
 }
 
 server {
+    listen 80;
+    server_name i13c107.p.ssafy.io;
+
+    location ^~ /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        default_type "text/plain";
+        try_files $uri =404;
+    }
+
+    return 301 https://www.malmoon.store$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name i13c107.p.ssafy.io;
+
+    ssl_certificate /etc/letsencrypt/live/malmoon.store/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/malmoon.store/privkey.pem;
+
+    location ^~ /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        default_type "text/plain";
+        try_files $uri =404;
+    }
+
+    return 301 https://www.malmoon.store$request_uri;
+}
+
+server {
     listen 443 ssl;
     server_name malmoon.store www.malmoon.store;
 
     ssl_certificate /etc/letsencrypt/live/malmoon.store/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/malmoon.store/privkey.pem;
+
+    location ^~ /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        default_type "text/plain";
+        try_files $uri =404;
+    }
 
     # React 프론트
     location / {
