fix(ai,infra,nginx,frontend): 배포 환경에서 AAC 프리뷰 이미지가 표시되지 않는 문제 수정

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -99,6 +99,14 @@ server {
 #         proxy_set_header Host $host;
 #     }
 
+    location /ai-static/ {
+        alias /usr/share/nginx/ai-static/;
+        try_files $uri =404;
+        autoindex off;
+        expires 1h;
+        add_header Access-Control-Allow-Origin *;
+    }
+
     # 에러 페이지 설정
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
