--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
+      - ai_static:/usr/share/nginx/ai-static:ro
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
@@ -78,6 +79,11 @@ services:
       timeout: 3s
       retries: 5
       start_period: 20s
+    volumes:
+      - ai_static:/apps/AI/static
+    environment:
+      - PUBLIC_BASE_URL=https://www.malmoon.store
+      - PUBLIC_STATIC_PREFIX=/ai-static
     networks:
       - malmoon-net
 
@@ -98,6 +104,8 @@ services:
     networks:
       - malmoon-net
 
+volumes:
+  ai_static:
 
 networks:
   malmoon-net:
